k8s/demo/ingress/ingress_rewrite_target.yaml
# https://cloud.tencent.com/developer/article/1628571
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-http
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - host: test.ingress.com
      http:
        paths:
        - path: /foo/?(.*)
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 8889
        - path: /httpd/?(.*)
          pathType: Prefix
          backend:
            service:
              name: my-httpd
              port:
                number: 8800
