k8s/demo/ingress/ingress_rewrite_target_auth.yaml
# https://blog.csdn.net/woshizhangliang999/article/details/108762012
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - host: test.ingress.com
      http:
        paths:
        - path: /foo/?(.*)
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 8889
        - path: /httpd/?(.*)
          pathType: Prefix
          backend:
            service:
              name: my-httpd
              port:
                number: 8800
