k8s/demo/ingress/ingress_rewrite_target_https.yaml
# https://blog.csdn.net/woshizhangliang999/article/details/108762012 // doesn't work here...
# cert should be updated ...
# W0909 10:25:22.937397       7 controller.go:1236] Unexpected error validating SSL certificate "default/tls-secret" for server "test.ingress.com": x509: certificate is not valid for any names, but wanted to match test
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-https
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  tls:
    - hosts:
      - test.ingress.com
      secretName: tls-secret
  rules:
    - host: test.ingress.com
      http:
        paths:
        - path: /foo/?(.*)
          pathType: Prefix
          backend:
            service:
              name: my-service
              port:
                number: 8889
        - path: /httpd/?(.*)
          pathType: Prefix
          backend:
            service:
              name: my-httpd
              port:
                number: 8800
